contribution for player fixed if cadavre too long

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -66,6 +66,22 @@
 }
 
 /*****************************/
+/**** formulaire du joueur ****/
+/*****************************/
+
+.newContribution{
+  position: fixed;
+  bottom: 0;
+  padding: 1rem 2rem 4rem;
+  width: 100vw;
+  background-color: var(--blanc);
+}
+
+.joueur__main{
+  padding-bottom: 14rem;
+}
+
+/*****************************/
 /****  boutons du joueur  ****/
 /*****************************/
 
@@ -101,6 +117,7 @@
 
 .joueur__buttonBack{
   width: fit-content;
+  align-self: flex-start;
 }
 
 .content{
